--- a/frontend/src/app/pages/welcome/welcome.html
+++ b/frontend/src/app/pages/welcome/welcome.html
@@ -1,14 +1,51 @@
 <main class="">
-  <div class="flex flex-col h-screen 
+  <div class="flex flex-col   
     md:flex-row">
-    <article class="flex justify-center w-full h-screen 
-      md:w-[60vw] bg-amber-500">
+    <article class="flex justify-center w-full h-[30vh]  
+      md:w-[60vw] md:h-screen bg-amber-500">
       article
     </article>
 
-    <aside class="flex justify-center items-center w-full h-screen 
-      md:w-[40vw] bg-amber-900">
-      login
+    <aside class="flex justify-center items-center w-full h-[70vh]    
+      md:w-[40vw] md:h-screen bg-amber-900">
+      <mat-card appearance="outlined" class="w-full mx-4 md:mx-48">
+        <mat-card-header class="w-full flex justify-center items-center">
+          <mat-card-title class="pb-12">
+            Login
+          </mat-card-title>
+        </mat-card-header>
+
+        <mat-card-content>
+          <form 
+            [formGroup]="form" 
+            (ngSubmit)="handleLoginSubmit()" 
+            class="flex flex-col"
+          >
+            <mat-form-field appearance="outline">
+              <mat-label>Informe seu nome</mat-label>
+              <input 
+                matInput 
+                placeholder="Como vou te chamar?"
+                formControlName="username"
+              >
+              <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+              <mat-hint>Informe um nome entre 3 e 12 caracteres.</mat-hint>
+              @if (hasError('username')) {
+                <mat-error>{{getFieldError('username')}}</mat-error>
+              }
+            </mat-form-field>
+
+            <button 
+              matButton="filled" 
+              class="mt-8 mb-4 max-w-64 mx-auto" 
+              type="submit"
+              [disabled]="isFormInvalid()"
+            >
+              Acessar relatórios
+            </button>
+          </form>
+        </mat-card-content>
+      </mat-card>
     </aside>
   </div>
 </main>
