--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -6,6 +6,10 @@
 // custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
 
+* {
+  border: none;
+}
+
 html {
   @include mat.theme((
     color: (
