--- a/frontend/src/app/components/nav-container/nav-container.component.html
+++ b/frontend/src/app/components/nav-container/nav-container.component.html
@@ -5,9 +5,13 @@
       [opened]="(isHandset$ | async) === false">
     <mat-toolbar>Menu</mat-toolbar>
     <mat-nav-list>
-      <a mat-list-item routerLink="/teste">Link 1</a>
-      <a mat-list-item href="#">Link 2</a>
-      <a mat-list-item href="#">Link 3</a>
+      <a 
+        mat-list-item 
+        routerLink="/dashboard/product-sale-by-period"
+        class="text-wrap text-center"
+      >
+        Relatório de venda de produtos
+      </a>
     </mat-nav-list>
   </mat-sidenav>
   <mat-sidenav-content>
