--- a/frontend/src/app/pages/dashboard/default-reports/default-reports.html
+++ b/frontend/src/app/pages/dashboard/default-reports/default-reports.html
@@ -1,1 +1,9 @@
-<p>default-reports works!</p>
+<div style="text-align:center">
+  <apx-chart
+    #chart
+    [series]="chartOptions.series!"
+    [chart]="chartOptions.chart!"
+    [xaxis]="chartOptions.xaxis!"
+    [title]="chartOptions.title!"
+  ></apx-chart>
+</div>
