--- a/frontend/src/app/pages/dashboard/default-reports/default-reports.html
+++ b/frontend/src/app/pages/dashboard/default-reports/default-reports.html
@@ -1,4 +1,4 @@
-<div class="px-8 w-full h-full">
+<div class="w-full h-full flex flex-col gap-8 px-4 py-8">
   <div class="shadow-md border-2 rounded-md">
     @if (chartOptions) {
       <apx-chart
@@ -13,17 +13,83 @@
     }
   </div>
 
-  <div class="flex flex-col max-w-[16vw]">
-    @for (item of products; track $index) {
-      <div class="flex gap-8" [ngClass]="{
-        'bg-gray-400': $index % 2 == 0,
-        'bg-gray-100': $index % 2 != 0,
-      }">
-        <p>{{item.productId}}</p>
-        <p>{{item.productName}}</p>
-        <p>{{item.quantityOnSale}}</p>
-        <p>{{item.saleId}}</p>
+  <div class="flex flex-row gap-16">
+    <table mat-table [dataSource]="products" class="shadow-md border-2 rounded-md" style="min-width: max-content !important;">
+      <ng-container matColumnDef="productId">
+        <th mat-header-cell *matHeaderCellDef>
+          Id produto
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{element.productId}}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="productName">
+        <th mat-header-cell *matHeaderCellDef>
+          Nome do produto
+        </th>
+        <td mat-cell *matCellDef="let element">
+          {{element.productName}}
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="quantityOnSale">
+        <th mat-header-cell *matHeaderCellDef>
+          Qtd. ao concluir a venda
+        </th>
+        <td mat-cell *matCellDef="let element"> 
+          {{element.quantityOnSale}} 
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="productQuantityTotalSales">
+        <th mat-header-cell *matHeaderCellDef>
+          Qtd. total vendida
+        </th>
+        <td mat-cell *matCellDef="let element"> 
+          {{element.productQuantityTotalSales}} 
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="createdAt">
+        <th mat-header-cell *matHeaderCellDef>
+          Momento da venda
+        </th>
+        <td mat-cell *matCellDef="let element"> 
+          {{element.createdAt | date: 'dd/MM/yyyy hh:mm:ss'}} 
+        </td>
+      </ng-container>
+
+      <ng-container matColumnDef="saleId">
+        <th mat-header-cell *matHeaderCellDef>
+          Id venda
+        </th>
+        <td mat-cell *matCellDef="let element"> 
+          {{element.saleId}} 
+        </td>
+      </ng-container>
+
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+
+    <div class="flex flex-col gap-12">
+      <h1>Informações da venda</h1>
+
+      <div>
+        @if (sale) {
+          <div>
+            <mat-form-field appearance="outline">
+              <mat-label>Id da venda</mat-label>
+              <input matInput [value]="sale.id">
+            </mat-form-field>
+          </div>
+        } @else {
+          <div>
+            <- Clique no id da venda
+          </div>
+        }
       </div>
-    }
+    </div>
   </div>
 </div>
