frontend: ajust background of login page
Change-Id: Idb41e7e5e4c005e6a86c263785979009586759f3

--- a/frontend/src/app/pages/welcome/welcome.html
+++ b/frontend/src/app/pages/welcome/welcome.html
@@ -1,13 +1,21 @@
-<main class="">
-  <div class="flex flex-col   
+<main class="flex items-center justify-center h-full">
+  <div class="flex items-center justify-center h-full flex-col   
     md:flex-row">
-    <article class="flex justify-center w-full h-[30vh]  
-      md:w-[60vw] md:h-screen bg-amber-500">
-      article
+    <article class="flex flex-col justify-center items-center w-full lg:h-[30vh]  
+      md:w-[60vw] md:h-screen">
+      <img 
+        class="lg:w-[50vw] lg:h-[50vh] mb-20" 
+        src="/assets/login-background.png" 
+        alt="Imagem com pessoas apontando para um gráfico"
+      >
+      <h1 class="font-light text-2xl text-center px-24">
+        Empoderando quem faz delivery com dashboards intuitivos que transformam 
+        dados em decisões inteligentes e resultados melhores todos os dias.
+      </h1>
     </article>
 
-    <aside class="flex justify-center items-center w-full h-[70vh]    
-      md:w-[40vw] md:h-screen bg-amber-900">
+    <aside class="mt-24 md:mt-0 flex justify-center items-center w-full lg:h-[70vh]    
+      md:w-[40vw] md:h-screen">
       <mat-card appearance="outlined" class="w-full mx-4 md:mx-48">
         <mat-card-header class="w-full flex justify-center items-center">
           <mat-card-title class="pb-12">
@@ -28,7 +36,7 @@
                 placeholder="Como vou te chamar?"
                 formControlName="username"
               >
-              <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+              <mat-icon matSuffix>person</mat-icon>
               <mat-hint>Informe um nome entre 3 e 12 caracteres.</mat-hint>
               @if (hasError('username')) {
                 <mat-error>{{getFieldError('username')}}</mat-error>
